base/src/test/resources/failure/cubical/transport-non-constant.aya.txt
In file $FILE:17:6 ->

  15 | 
  16 | def GG (A : I -> Type) (a : A 0) (i : I) : A i
  17 |   => ((\j => A (i /\ j)).coe freeze i) a
             ^-----------------------------^

Error: Under the cofibration:
         i
       The type in the body still depends on the interval parameter:
         \ j => A (i /\ j)
         (Normalized under cofibration: \ j => A j)
       which is not allowed in coercion

1 error(s), 0 warning(s).
What are you doing?
